pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/state-move-entry.ub
factory: {
  state-moves: [
    {
      from: 'core.thing@resource.old'
      from: 'core.thing@resource.other'
      to:   'core.thing@resource.new'
    }
  ]
}
